--- a/src/pages/introduction.mdx
+++ b/src/pages/introduction.mdx
@@ -6,12 +6,12 @@ import Values from '../components/intro/Values';
 
 Most resources and knowledge about alignment are currently scattered (and it’s hard to know what’s important).
 
-This guide is a <b>curated central hub of information and resources for alignment.</b> We keep every page short for you, with options to dig deeper.
+This guide is a <b>curated central hub of information and resources for alignment.</b> Crucially, we view alignment as as technical problem, and as such, we provide technical resources. We keep every page short for you, with options to dig deeper.
 
 ## What's this all about?
 
 Misaligned AI ≠ Terminator movies. Superintelligence doesn't need to be 'evil' to pose a threat. By default, all intelligent agents—including
-humans—aim to preserve themselves, acquire resources, and improve themselves. <span class="highlight">This means AI smarter than us could inadvertently endanger humanity.</span>
+humans—aim to preserve themselves, acquire resources, and improve themselves. <b>This means AI smarter than us could inadvertently endanger humanity.</b>
 
 To be clear, there is <span className='font-bold'>no guarantee</span> that AI will care about the same exact values we do.
 
