--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -32,7 +32,7 @@ import SectionCard from '@/components/elements/SectionCard';
 <SectionCard number='04' title='Concrete next steps' href=''>
     <ul className="compact-quickstart-list">
         <li>How can you contribute?</li>
-        <li>Concrete directions to take action, including a list of open problems to work on</li>
+        <li>Our comments on directions to take action, including a list of open problems to work on</li>
     </ul>
 </SectionCard>
 </div>
