--- a/src/pages/why-alignment/default-dangerous.mdx
+++ b/src/pages/why-alignment/default-dangerous.mdx
@@ -14,7 +14,7 @@ But how is this different than machines we’ve already built that are better th
 
 ## Consequences
 
-<p><span className="highlight">Why should a superintelligent AI concern you any more than the fact that mechanical vehicles can go faster than a human can run?</span></p>
+<p><span className="font-bold">Why should a superintelligent AI concern you any more than the fact that mechanical vehicles can go faster than a human can run?</span></p>
 
 The fundamental difference between superintelligent AI and mechanical vehicles is the **generality** of their capabilities.
 
@@ -26,7 +26,7 @@ _Okay, even if that’s true, how would a chatbot take over the world?_
 
 ## Abilities
 
-<p><span className="highlight">How would an AI actually gain or wield power if it exists only as a computer program?</span></p>
+<p><span className="font-bold">How would an AI actually gain or wield power if it exists only as a computer program?</span></p>
 
 <Toggle
     title={
@@ -49,9 +49,9 @@ _But why should we expect it to use its power to the detriment of humankind?_
 
 ## Destructiveness
 
-<p><span className="highlight">Wouldn’t a superintelligent AI be smart enough to use its power responsibly?</span></p>
+<p><span className="font-bold">Wouldn’t a superintelligent AI be smart enough to use its power responsibly?</span></p>
 
-In short, **no**. An AI system will use its power in a way to maximize its goals _regardless of the nature of its goals_ (and as we’ve seen, it is difficult to choose good goals). <b className="highlight">A superintelligent AI would simply be better at doing so.</b>
+In short, **no**. An AI system will use its power in a way to maximize its goals _regardless of the nature of its goals_ (and as we’ve seen, it is difficult to choose good goals). <b className="font-bold">A superintelligent AI would simply be better at doing so.</b>
 
 <Toggle
     title={
