--- a/src/pages/why-alignment/understanding-alignment.mdx
+++ b/src/pages/why-alignment/understanding-alignment.mdx
@@ -25,7 +25,7 @@ This guide is about the upper righthand square, where things go wrong by acciden
 
 <div>
     <u>AI alignment</u> is an approach to the <u>AI control</u> problem. More specifically, the **alignment** problem is about{' '}
-    <span className='highlight'>building AI systems that are trying to do what their operator wants them to do</span>. In other words, AI alignment aims to solve the control problem by making sure the AI does the right thing to
+    <span className='font-bold'>building AI systems that are trying to do what their operator wants them to do</span>. In other words, AI alignment aims to solve the control problem by making sure the AI does the right thing to
     begin with, without considering approaches like containing, manipulating, or outsmarting the AI.
 </div>
 
