--- a/src/pages/why-alignment/why-this-is-urgent.mdx
+++ b/src/pages/why-alignment/why-this-is-urgent.mdx
@@ -6,7 +6,7 @@ import LinkBadge from '@/components/elements/LinkBadge';
 
 <Promise>After reading this, you will understand why alignment work is urgent and cannot wait until after we have developed Artificial General Intelligence.</Promise>
 
-1. AGI is [being projected](https://www.dwarkeshpatel.com/p/dario-amodei) for 2029, and <span className="highlight">it’s a realistic prediction.</span>
+1. AGI is [being projected](https://www.dwarkeshpatel.com/p/dario-amodei) for 2029, and <span className="font-bold">it’s a realistic prediction.</span>
 
 <Toggle title={<div>While this may seem like an overly optimistic prediction, technological progress happens <b>exponentially</b>.</div>}>
     - We often use the last decade as a benchmark to predict future progress, but this is a *flawed* approach: You need to imagine things progressing at a *much faster rate* than they are now.
@@ -24,7 +24,7 @@ import LinkBadge from '@/components/elements/LinkBadge';
 
 ---
 
-2. AGI has **no reason** to plateau at human-level intelligence. In fact, we believe it would shoot right past it very, very quickly: <span className="highlight">A system more intelligent than all of humanity could emerge within **days or years** after we hit AGI.</span> The **takeoff to superintelligence will be short.**
+2. AGI has **no reason** to plateau at human-level intelligence. In fact, we believe it would shoot right past it very, very quickly: <span className="font-bold">A system more intelligent than all of humanity could emerge within **days or years** after we hit AGI.</span> The **takeoff to superintelligence will be short.**
 
     <Toggle
         title={
@@ -51,7 +51,7 @@ import LinkBadge from '@/components/elements/LinkBadge';
 
 ---
 
-3. <span className='highlight'>We have **one chance** to solve AI alignment.</span> Once a misaligned AGI exists, our fate would be sealed.
+3. <span className='font-bold'>We have **one chance** to solve AI alignment.</span> Once a misaligned AGI exists, our fate would be sealed.
    <Toggle
        title={
            <div>
