--- a/src/pages/why-alignment/understanding-alignment.mdx
+++ b/src/pages/why-alignment/understanding-alignment.mdx
@@ -45,9 +45,9 @@ The alignment problem is commonly misunderstood as “aligning the AI’s values
 
 ---
 
-<Toggle title='Sources / dig deeper'>
-    The definitions above come from **our interpretations** of Paul Christiano’s writing. If you wish to dig deeper into these definitions, he has very precise and thoughtful blog posts: - [**AI “safety” vs “control” vs
-    “alignment”**](https://ai-alignment.com/ai-safety-vs-control-vs-alignment-2a4b42a863cc) _(Nov 2016)_: his initial definition attempt - [**Clarifying “AI
-    alignment”**](https://ai-alignment.com/clarifying-ai-alignment-cec47cd69dd6) _(April 2018):_ his latest definition of “AI alignment” - [**AI alignment is distinct from its near-term
-    applications**](https://ai-alignment.com/ai-alignment-is-distinct-from-its-near-term-applications-81300500ad2e) _(Dec 2022)_: contains his best definition + an important comment on alignment misconceptions
+<Toggle title='Sources and resources' className="px-4 bg-accent-400 rounded-xl">
+    1. The definitions above come from our interpretations of Paul Christiano’s writing. If you wish to dig deeper into these definitions, he has very precise and thoughtful blog posts: 
+        - [AI “safety” vs “control” vs “alignment”](https://ai-alignment.com/ai-safety-vs-control-vs-alignment-2a4b42a863cc) _(Nov 2016)_: his initial definition attempt (which he has since adapted)
+        - [Clarifying “AI alignment”](https://ai-alignment.com/clarifying-ai-alignment-cec47cd69dd6) _(April 2018):_ his latest definition of “AI alignment” 
+        - [AI alignment is distinct from its near-term applications](https://ai-alignment.com/ai-alignment-is-distinct-from-its-near-term-applications-81300500ad2e) _(Dec 2022)_: contains his best definition + an important comment on alignment misconceptions
 </Toggle>
