add sources and resources to why is alignment difficult

--- a/src/pages/why-alignment/default-dangerous.mdx
+++ b/src/pages/why-alignment/default-dangerous.mdx
@@ -26,7 +26,7 @@ _Okay, even if that’s true, how would a chatbot take over the world?_
 
 ## Abilities
 
-<p><span className="font-bold">How would an AI actually gain or wield power if it exists only as a computer program?</span></p>
+<p><span className="font-bold">How could a computer program gain or wield power?</span></p>
 
 <Toggle
     title={
