--- a/src/pages/why-alignment/our-opportunity.mdx
+++ b/src/pages/why-alignment/our-opportunity.mdx
@@ -6,7 +6,7 @@ import CustomAlert from "@/components/elements/CustomAlert";
 <Promise>
 How do we, humans, actually go about aligning an intelligence far superior to our own?
 
-**Promise: After reading this, you will know actionable next steps we can take to align superintelligence.**
+**After reading this, you will know actionable next steps we can take to align superintelligence.**
 
 </Promise>
 
