--- a/src/pages/why-alignment/why-alignment-is-difficult.mdx
+++ b/src/pages/why-alignment/why-alignment-is-difficult.mdx
@@ -77,3 +77,8 @@ Today’s language models can be considered the “babies.” The superintellige
 </Toggle>
 
 We also **may only get one shot** (<LinkBadge text="Why this is urgent" link="/why-alignment/why-this-is-urgent" />).
+
+<Toggle title="Sources and resources" className="px-4 bg-accent-400 rounded-xl">
+1. The next read we recommend is Leopold Aschenbrenner's essay on [Superalignment](https://situational-awareness.ai/superalignment/), where he dives deep into the the unsolved technical problem of reliably controlling AI smarter than us.
+2. The chart, teacup example, and general framing above comes from Robert Mile's [Intro to AI Safety](https://www.youtube.com/watch?v=pYXy-A4siMw).
+</Toggle>
