instrumental convergence and orthogonality links

--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -29,7 +29,7 @@ import SectionCard from '@/components/elements/SectionCard';
         <li>Next step opportunities (”todos”)</li>
     </ul>
 </SectionCard>
-<SectionCard number='04' title='Concrete next steps' href=''>
+<SectionCard number='04' title='Next steps' href=''>
     <ul className="compact-quickstart-list">
         <li>How can you contribute?</li>
         <li>Our comments on directions to take action, including a list of open problems to work on</li>
