--- a/src/pages/why-alignment/default-dangerous.mdx
+++ b/src/pages/why-alignment/default-dangerous.mdx
@@ -79,3 +79,8 @@ Moreover, even if the AI system’s final goals seem safe, it is likely that it 
 </Toggle>
 
 Hence, it is not enough to align an AI system's final goals alone; we must also align its intermediate goals, which by default will be identical to those of a misaligned system.
+
+<Toggle title="Sources and resources" className="px-4 bg-accent-400 rounded-xl">
+1. Robert Miles provides great introductions to the orthongality thesis in [Intelligence and Stupidity](https://www.youtube.com/watch?v=hEUO6pjwFOo&lc=UgzWZ_bUKbKohc0gK3V4AaABAg) and instrumental convergence in [Why Would AI Want to do Bad Things?](https://www.youtube.com/watch?v=ZeecOKBus3Q)
+2. For a comprehensive and in-depth understanding of these two concepts, see Arbital's docs on [instrumental convergence](https://arbital.com/p/instrumental_convergence/) and [orthogonality](https://arbital.com/p/orthogonality/)
+</Toggle>
