fix link badges

--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -1,6 +1,7 @@
 import Promise from '@/components/elements/Promise';
 import CustomAlert from '@/components/elements/CustomAlert';
 import SectionCard from '@/components/elements/SectionCard';
+import LinkBadge from '@/components/elements/LinkBadge';
 
 # Quickstart: How to use this guide
 
@@ -45,3 +46,8 @@ import SectionCard from '@/components/elements/SectionCard';
     variant='warning'
     description="As we fill out the rest of the guide, we'll be updating this section with which pages you should start with and visit next (based on what you're looking for)."
 />
+
+We recommend you start with a look at <LinkBadge href='/why-alignment'>Why Alignment is Urgent</LinkBadge> for an overview for what the alignment problem is about and why it matters; even if you've heard of alignment before, there's a lot of misconceptions and misunderstandings within the space.
+
+
+
