--- a/src/pages/why-alignment/why-this-is-urgent.mdx
+++ b/src/pages/why-alignment/why-this-is-urgent.mdx
@@ -55,7 +55,7 @@ import LinkBadge from '@/components/elements/LinkBadge';
    <Toggle
        title={
            <div>
-               Sufficiently intelligent AI systems will possess <strong>instrumental convergent goals</strong> (<LinkBadge text='Why is alignment difficult?' link='/why-alignment/why-alignment-is-difficult' />
+               Sufficiently intelligent AI systems will possess <strong>instrumental convergent goals</strong> (<LinkBadge href='/why-alignment/why-alignment-is-difficult'>Why is alignment difficult?</LinkBadge>
                ), for example <em>goal preservation</em> and <em>self-preservation</em>, which lead to AI drives that are default harmful.
            </div>
        }
