--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -9,32 +9,32 @@ import SectionCard from '@/components/elements/SectionCard';
 ## Table of Contents
 
 <div className='grid lg:grid-cols-2 gap-x-5 gap-y-5'>
-<SectionCard number='01' title='Why alignment urgently matters' href='/why-alignment'>
-    <ul className="compact-quickstart-list">
-        <li>What exactly is alignment? Does it matter right now?</li>
-        <li>Responses to FAQs and common misconceptions</li>
-    </ul>
-</SectionCard>
-<SectionCard number='02' title='Overview of current efforts' href='/overview-current-efforts'>
-    <ul className="compact-quickstart-list">
-        <li>What are the current main efforts from prominent organizations?</li>
-        <li>A concise birds-eye view of their research directions and mission/philosophy</li>
-    </ul>
-</SectionCard>
-<SectionCard number='03' title='Research Directions' href=''>
-<div>For the current main efforts, we touch on:</div>
-    <ul className="compact-quickstart-list">
-        <li>Up-to-date summary of recent work</li>
-        <li>Top resources to learn more</li>
-        <li>Next step opportunities (”todos”)</li>
-    </ul>
-</SectionCard>
-<SectionCard number='04' title='Concrete next steps' href=''>
-    <ul className="compact-quickstart-list">
-        <li>How can you contribute?</li>
-        <li>Our comments on directions to take action, including a list of open problems to work on</li>
-    </ul>
-</SectionCard>
+    <SectionCard number='01' title='Why alignment urgently matters' href='/why-alignment'>
+        <ul className='compact-quickstart-list'>
+            <li>What exactly is alignment? Does it matter right now?</li>
+            <li>Responses to FAQs and common misconceptions</li>
+        </ul>
+    </SectionCard>
+    <SectionCard number='02' title='Overview of current efforts' href='/overview-current-efforts'>
+        <ul className='compact-quickstart-list'>
+            <li>What are the current main efforts from prominent organizations?</li>
+            <li>A concise birds-eye view of their research directions and mission/philosophy</li>
+        </ul>
+    </SectionCard>
+    <SectionCard number='03' title='Research Directions' href=''>
+        <div>For the current main efforts, we touch on:</div>
+        <ul className='compact-quickstart-list'>
+            <li>Up-to-date summary of recent work</li>
+            <li>Top resources to learn more</li>
+            <li>Next step opportunities (”todos”)</li>
+        </ul>
+    </SectionCard>
+    <SectionCard number='04' title='Next steps' href=''>
+        <ul className='compact-quickstart-list'>
+            <li>How can you contribute?</li>
+            <li>Our comments on directions to take action, including a list of open problems to work on</li>
+        </ul>
+    </SectionCard>
 </div>
 
 ## How should you navigate this guide?
