--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -38,13 +38,10 @@ import LinkBadge from '@/components/elements/LinkBadge';
     </SectionCard>
 </div>
 
-## How should you navigate this guide?
-
-<CustomAlert
-    variant='warning'
-    title='This section is incomplete'
-    variant='warning'
-    description="As we fill out the rest of the guide, we'll be updating this section with which pages you should start with and visit next (based on what you're looking for)."
-/>
+## Using this guide
 
 We recommend you start with a look at <LinkBadge href='/why-alignment'>Why Alignment is Urgent</LinkBadge> for an overview for what the alignment problem is about and why it matters; even if you've heard of alignment before, there's a lot of misconceptions and misunderstandings within the space.
+
+<LinkBadge href='/overview-current-efforts'>Overview of Current Efforts</LinkBadge> actually dives into what current organizations are doing, and then we further expand on those technical research directions in <LinkBadge href='/research-directions'>Research Directions</LinkBadge>.
+
+Lastly, <LinkBadge href='/next-steps'>Next Steps</LinkBadge> is where we recommend you go if you want to start working on alignment.
