new pages added

--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -22,7 +22,7 @@ import LinkBadge from '@/components/elements/LinkBadge';
             <li>A concise birds-eye view of their research directions and mission/philosophy</li>
         </ul>
     </SectionCard>
-    <SectionCard number='03' title='Research Directions' href=''>
+    <SectionCard number='03' title='Research Directions' href='/research-directions'>
         <div>For the current main efforts, we touch on:</div>
         <ul className='compact-quickstart-list'>
             <li>Up-to-date summary of recent work</li>
@@ -30,7 +30,7 @@ import LinkBadge from '@/components/elements/LinkBadge';
             <li>Next step opportunities (”todos”)</li>
         </ul>
     </SectionCard>
-    <SectionCard number='04' title='Next steps' href=''>
+    <SectionCard number='04' title='Next steps' href='/next-steps'>
         <ul className='compact-quickstart-list'>
             <li>How can you contribute?</li>
             <li>Our comments on directions to take action, including a list of open problems to work on</li>
