--- a/src/pages/overview-current-efforts.mdx
+++ b/src/pages/overview-current-efforts.mdx
@@ -108,3 +108,8 @@ at these companies and know where to go to read more.**
     </AccordionItem>
   </Accordion>
 </div>
+
+### Comments
+1. A worthwhile read is [Nobody's on the ball on AGI alignment](https://www.forourposterity.com/nobodys-on-the-ball-on-agi-alignment/) by Leopold Aschenbrenner, which includes a quick tour of the research landscape and, more importantly, why most research efforts are not actually useful in the urgent alignment problem.
+2. Learn more about each research direction in <LinkBadge href='/research-directions'>Research Directions</LinkBadge>.
+
