pushing *something* shareable

--- a/src/pages/introduction.mdx
+++ b/src/pages/introduction.mdx
@@ -1,4 +1,5 @@
 import Values from '../components/intro/Values';
+import FalseCard from '../components/intro/FalseCard';
 
 # Introduction
 
@@ -18,5 +19,21 @@ To be clear, there is <span className='font-bold'>no guarantee</span> that AI wi
 Think of when the atomic bomb was first being created: before we ever needed to worry about misuse, there was the very real possibility that we could accidentally set the world on fire.
 
 We’re on the path to build something much harder to contain than nuclear weapons: superintelligent AI. Alignment is making sure we don’t <b>accidentally</b> end the world.
+
+## To be clear, we are not:
+
+<div className='space-y-10'>
+<FalseCard title='We do NOT advocate for slowing or pausing AI capabilities research.'>
+    The best alignment methods have stemmed from advancements in AI capabilities—a trend we expect to continue. Moreover, pausing AI at this stage is completely unrealistic and undesirable due to overwhelming economic and
+    technological incentives.
+</FalseCard>
+
+<FalseCard title='We are NOT suggesting that a misaligned AGI must possess consciousness or even seem as intelligent as a cat or dog.'>
+    It doesn't need to harbor any animosity towards humans to pose a threat. Just as autonomous drones can be dangerous without consciousness, a misaligned AGI, with its significantly greater potential, could be far more
+    hazardous.
+</FalseCard>
+</div>
+
+## So what are we doing here?
 
 <Values />
