--- a/src/pages/introduction.mdx
+++ b/src/pages/introduction.mdx
@@ -3,6 +3,8 @@ import FalseCard from '../components/intro/FalseCard';
 
 # Introduction
 
+![Magnificent Grants](../assets/magnificent-grants-image.png)
+
 ## What is this guide?
 
 Most resources and knowledge about alignment are currently scattered (and it’s hard to know what’s important).
