--- a/src/pages/why-alignment/default-dangerous.mdx
+++ b/src/pages/why-alignment/default-dangerous.mdx
@@ -13,7 +13,9 @@ But how is this different than machines we’ve already built that are better th
 
 ## Consequences
 
-<p><span className="font-bold">Why should a superintelligent AI concern you any more than the fact that mechanical vehicles can go faster than a human can run?</span></p>
+<p>
+    <span className='font-bold'>Why should a superintelligent AI concern you any more than the fact that mechanical vehicles can go faster than a human can run?</span>
+</p>
 
 The fundamental difference between superintelligent AI and mechanical vehicles is the **generality** of their capabilities.
 
@@ -25,7 +27,9 @@ _Okay, even if that’s true, how would a chatbot take over the world?_
 
 ## Abilities
 
-<p><span className="font-bold">How could a computer program gain or wield power?</span></p>
+<p>
+    <span className='font-bold'>How could a computer program gain or wield power?</span>
+</p>
 
 <Toggle
     title={
@@ -48,7 +52,9 @@ _But why should we expect it to use its power to the detriment of humankind?_
 
 ## Destructiveness
 
-<p><span className="font-bold">Wouldn’t a superintelligent AI be smart enough to use its power responsibly?</span></p>
+<p>
+    <span className='font-bold'>Wouldn’t a superintelligent AI be smart enough to use its power responsibly?</span>
+</p>
 
 In short, **no**. An AI system will use its power in a way to maximize its goals _regardless of the nature of its goals_ (and as we’ve seen, it is difficult to choose good goals). <b className="font-bold">A superintelligent AI would simply be better at doing so.</b>
 
@@ -79,7 +85,8 @@ Moreover, even if the AI system’s final goals seem safe, it is likely that it 
 
 Hence, it is not enough to align an AI system's final goals alone; we must also align its intermediate goals, which by default will be identical to those of a misaligned system.
 
-<Toggle title="Sources and resources" className="px-4 bg-accent-400 rounded-xl">
-1. Robert Miles provides great introductions to instrumental convergence in [Why Would AI Want to do Bad Things?](https://www.youtube.com/watch?v=ZeecOKBus3Q) and the orthongality thesis in [Intelligence and Stupidity](https://www.youtube.com/watch?v=hEUO6pjwFOo&lc=UgzWZ_bUKbKohc0gK3V4AaABAg).
-2. For a comprehensive and in-depth understanding of these two concepts, see Arbital's docs on [instrumental convergence](https://arbital.com/p/instrumental_convergence/) and [orthogonality](https://arbital.com/p/orthogonality/).
+<Toggle title='Sources and resources' className='px-4 bg-accent-400 rounded-xl mt-10'>
+    1. Robert Miles provides great introductions to instrumental convergence in [Why Would AI Want to do Bad Things?](https://www.youtube.com/watch?v=ZeecOKBus3Q) and the orthongality thesis in [Intelligence and
+    Stupidity](https://www.youtube.com/watch?v=hEUO6pjwFOo&lc=UgzWZ_bUKbKohc0gK3V4AaABAg). 2. For a comprehensive and in-depth understanding of these two concepts, see Arbital's docs on [instrumental
+    convergence](https://arbital.com/p/instrumental_convergence/) and [orthogonality](https://arbital.com/p/orthogonality/).
 </Toggle>
