--- a/src/pages/why-alignment/why-alignment-is-difficult.mdx
+++ b/src/pages/why-alignment/why-alignment-is-difficult.mdx
@@ -78,7 +78,7 @@ Today’s language models can be considered the “babies.” The superintellige
 
 We also **may only get one shot** (<LinkBadge href="/why-alignment/why-this-is-urgent">Why this is urgent</LinkBadge>).
 
-<Toggle title="Sources and resources" className="px-4 bg-accent-400 rounded-xl">
-1. Leopold Aschenbrenner's essay on [Superalignment](https://situational-awareness.ai/superalignment/) dives deeper into the the unsolved technical problem of reliably controlling AI smarter than us.
-2. The teacup example and general framing on this page comes from Robert Mile's [Intro to AI Safety](https://www.youtube.com/watch?v=pYXy-A4siMw).
+<Toggle title='Sources and resources' className='px-4 bg-accent-400 rounded-xl mt-10'>
+    1. Leopold Aschenbrenner's essay on [Superalignment](https://situational-awareness.ai/superalignment/) dives deeper into the the unsolved technical problem of reliably controlling AI smarter than us. 2. The teacup example and
+    general framing on this page comes from Robert Mile's [Intro to AI Safety](https://www.youtube.com/watch?v=pYXy-A4siMw).
 </Toggle>
