--- a/src/pages/research-directions.mdx
+++ b/src/pages/research-directions.mdx
@@ -22,7 +22,7 @@ While reinforcement learning from human feedback (RLHF) has been largely success
 We will need new methods and scientific breakthroughs to ensure superhuman AI systems reliably follow their operator’s intent.
 
 ## Directions
-<div class="mt-1">
+<div>
   <Accordion type="single" collapsible className="w-full">
     <AccordionItem value="item-1">
       <AccordionTrigger>
