--- a/src/pages/why-alignment/our-opportunity.mdx
+++ b/src/pages/why-alignment/our-opportunity.mdx
@@ -21,7 +21,7 @@ Many people and organizations have proposed methods for aligning AI. We believe 
 
 **Qualitative Capabilities**: Superhuman AGI will also be able to formulate and solve problems beyond human comprehension using frameworks that humans have not discovered. A classic baby example of this is AlphaGo’s move 37 (an unusual move that seemed like a mistake).
 
-## Aligning Quantitatively Superior AGI
+## Aligning quantitatively superior AGI
 
 A combination of scaled-up versions of current methods is likely to be enough to solve this aspect of alignment (mostly).
 
@@ -35,7 +35,7 @@ A combination of scaled-up versions of current methods is likely to be enough to
 
 Importantly, at this stage, *humans will be in the loop* and can still verify what these AI systems are actually doing. 
 
-## Aligning Qualitatively Superior AGI
+## Aligning qualitatively superior AGI
 A different paradigm will be necessary for aligning qualitatively superior AGI: it will be crucial to automate alignment research. 
 
 As Leopold discusses in his essay, AI capability research will certainly become automated, and alignment research will also have to be automated in order to keep up. The following is the rough framework for how automating alignment research would go:
