update home copy

--- a/src/pages/introduction.mdx
+++ b/src/pages/introduction.mdx
@@ -16,7 +16,7 @@ humans—aim to preserve themselves, acquire resources, and improve themselves. 
 
 To be clear, there is <span className='font-bold'>no guarantee</span> that AI will care about the same exact values we do.
 
-Think of when the atomic bomb was first being created: before we ever needed to worry about misuse, there was the very real possibility that we could accidentally set the world on fire.
+Think of when the atomic bomb was first being created: Before we ever needed to worry about misuse, there was the very real possibility that we could accidentally set the world on fire.
 
 We’re on the path to build something much harder to contain than nuclear weapons: superintelligent AI. Alignment is making sure we don’t <b>accidentally</b> end the world.
 
@@ -29,7 +29,7 @@ We’re on the path to build something much harder to contain than nuclear weapo
 </FalseCard>
 
 <FalseCard title='We are NOT suggesting that a misaligned AGI must possess consciousness or even seem as intelligent as a cat or dog.'>
-    It doesn't need to harbor any animosity towards humans to pose a threat. Just as autonomous drones can be dangerous without consciousness, a misaligned AGI, with its significantly greater potential, could be far more
+    An AGI doesn't need animosity towards humans to be dangerous. Just as autonomous drones can be dangerous without consciousness, a misaligned AGI, with its significantly greater potential, could be far more
     hazardous.
 </FalseCard>
 </div>
